# fasthtml-admin

./: README.md  example.py  example_peewee.py  pyproject.toml
src/fasthtml_admin/: __init__.py  admin.py  auth.py  oauth.py
src/fasthtml_admin/models/: __init__.py  peewee_adaptator.py
