[project]
name = "fasthtml-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "python-fasthtml>=0.12.1",
]

[project.scripts]
hello = "fasthtml_admin:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
